--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -103,18 +103,18 @@
 				<div class="welcome-hero-serch-box">
 					<div class="welcome-hero-form">
 						<div class="single-welcome-hero-form">
-							<h3>what?</h3>
+							<h3>stanowisko</h3>
 							<form action="index.html">
-								<input type="text" placeholder="Ex: palce, resturent, food, automobile" />
+								<input type="text" placeholder="np: junior, mid, senior" />
 							</form>
 							<div class="welcome-hero-form-icon">
 								<i class="flaticon-list-with-dots"></i>
 							</div>
 						</div>
 						<div class="single-welcome-hero-form">
-							<h3>location</h3>
+							<h3>lokalizacja</h3>
 							<form action="index.html">
-								<input type="text" placeholder="Ex: london, newyork, rome" />
+								<input type="text" placeholder="np: gdynia, gdansk, warszawa" />
 							</form>
 							<div class="welcome-hero-form-icon">
 								<i class="flaticon-gps-fixed-indicator"></i>
